--- a/back-end/src/WebUI/appsettings.json
+++ b/back-end/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=localhost;Database=Assets;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
