WebUI to API project

--- a/back-end/src/API/API.csproj
+++ b/back-end/src/API/API.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Assets.WebUI</RootNamespace>
-    <AssemblyName>Assets.WebUI</AssemblyName>
+    <RootNamespace>Assets.API</RootNamespace>
+    <AssemblyName>Assets.API</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
