--- a/back-end/src/API/appsettings.json
+++ b/back-end/src/API/appsettings.json
@@ -9,8 +9,8 @@
   },
   "IdentityServer": {
     "Clients": {
-      "Assets.WebUI": {
-        "Profile": "IdentityServerSPA"
+      "Assets.API": {
+        "Profile": "IdentityServerJwt"
       }
     }
   },
