--- a/back-end/src/API/appsettings.Production.json
+++ b/back-end/src/API/appsettings.Production.json
@@ -1,5 +1,4 @@
 {
-  "UseInMemoryDatabase": false,
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -12,7 +11,7 @@
       "Type": "Store",
       "StoreName": "My",
       "StoreLocation": "CurrentUser",
-      "Name": "CN=MyApplication"
+      "Name": "CN=AssetsAPI"
     }
   }
 }
