Config update for Clients and connection string name

--- a/back-end/src/API/appsettings.json
+++ b/back-end/src/API/appsettings.json
@@ -1,17 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Assets;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "SQLServer": "Server=localhost;Database=Assets;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-    }
-  },
-  "IdentityServer": {
-    "Clients": {
-      "Assets.API": {
-        "Profile": "IdentityServerJwt"
-      }
     }
   },
   "AllowedHosts": "*"
