Update on WebUI to API Identity tables rename Bug fix application integration tests

--- a/back-end/tests/Applicaton.IntegrationTests/Application.IntegrationTests.csproj
+++ b/back-end/tests/Applicaton.IntegrationTests/Application.IntegrationTests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\WebUI\API.csproj" />
+    <ProjectReference Include="..\..\src\API\API.csproj" />
   </ItemGroup>
 
 </Project>
